# kws-mandarin

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: base.yaml  base_1gpu.yaml  base_2gpu.yaml  long_s20.yaml  long_s20_1gpu.yaml  scale12.yaml  scale20.yaml  scale6.yaml  sweep1_s12.yaml  sweep1_s3.yaml  sweep1_s6.yaml  sweep8_s12.yaml  sweep8_s20.yaml  sweep8_s3.yaml  sweep8_s30.yaml  sweep8_s40.yaml  sweep8_s6.yaml  sweep_s12.yaml  sweep_s20.yaml  sweep_s3.yaml  sweep_s30.yaml  sweep_s40.yaml  sweep_s40_m32.yaml  sweep_s6.yaml
docs/: architecture.md  data.md  decisions.md  evaluation.md
reports/: capacity_sweep.html  capacity_sweep.md  snr_sweep_s20.json
scripts/: benchmark_kws.py  build_vocab.py  collect_sweep.py  download_data.sh  eval_mobvoi.py  eval_snr.py  sweep.sh  train.sh
src/kws_mandarin/: __init__.py  config.py  confusables.py
src/kws_mandarin/data/: __init__.py  augment.py  dataset.py  manifest.py  prepare_aishell.py  rir_pack.py  shard.py  validate.py
src/kws_mandarin/decode/: __init__.py  keyword_search.py
src/kws_mandarin/eval/: __init__.py  benchmark.py  det.py  mobvoi.py
src/kws_mandarin/features/: __init__.py  logmel.py
src/kws_mandarin/loss/: __init__.py  ctc.py
src/kws_mandarin/models/: __init__.py  bcresnet.py  (+3 more)
tests/: test_augment.py  test_bcresnet.py  test_benchmark.py  test_config.py  test_confusables.py  test_ctc.py  test_data_prepare.py  test_dataset.py  test_decode.py  test_det.py  test_frontend.py  test_mobvoi.py  test_ntc.py  test_rir_pack.py  test_shard.py  test_tokenizer.py  test_train.py  test_validate.py
(+10 files in other folders)
