[project]
name = "kws-mandarin"
version = "0.0.1"
description = "Robust open-vocabulary Mandarin keyword spotting (BC-ResNet + CTC + wildcard-arc noise-aware training)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "kws-mandarin" }]
dependencies = [
    "numpy>=1.26",
    "pypinyin>=0.53",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy training/runtime deps kept out of the base env so `uv sync` stays fast
# and the tokenizer + eval harness can be exercised without a GPU/torch download.
train = [
    "torch>=2.4",
    "torchaudio>=2.4",
    "soundfile>=0.12",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kws_mandarin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
